--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-dashboard works!
-</p>
+<div class="parent">
+  <a  routerLink="/parking-form">
+  <button color="accent" mat-raised-button>Add Parking Form</button>
+  </a>
+  <a  routerLink="/parking-vehicle-list">
+    <button color="accent" mat-raised-button>View Parking Vehicle</button>
+    </a>
+</div>
