--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -1,1 +1,59 @@
 /* Add application styles & imports to this file! */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+* {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important
+}
+
+.parent {
+  padding-left: 15px;
+  padding-top: 15px;
+  min-height: 100vh;
+  background-color: rgb(243, 241, 241);
+}
+
+.display-card {
+  background-color: rgb(148, 157, 164);
+  margin: 5px;
+  min-height: 300px !important;
+  height: auto  !important;
+  width: 280px !important;
+  border-radius: 5px;
+}
+
+.image {
+  height: 50%;
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+.title {
+  font-size: 15px;
+  margin-top: 5px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+}
+
+.datatable-container-list-view {
+  overflow: auto;
+  padding: 0;
+  border-radius: 4px;
+  border: 1px solid black;
+  max-height: 500px;
+}
+
+.table-header {
+  background-color: antiquewhite !important;
+}
+
+.toolbar-design {
+  background-color: rgb(215, 217, 223);
+}
+
+.input-container mat-form-field:not(:last-child),
+.input-container button:not(:last-child),
+.input-container mat-checkbox:not(:last-child) {
+  margin-right: 12px;
+}
