--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,8 +1,49 @@
 <div class="parent">
+  <div class="fs-1 p-1 fw-semibold">Dashboard</div>
   <a  routerLink="/parking-form">
-  <button color="accent" mat-raised-button>Add Parking Form</button>
+  <button color="accent" class="me-3" mat-raised-button>Add Parking Form</button>
   </a>
   <a  routerLink="/parking-vehicle-list">
     <button color="accent" mat-raised-button>View Parking Vehicle</button>
     </a>
+
+    <div class="mt-3" fxLayout="row" fxLayoutAlign="start start" >
+      <mat-card>
+        <div class="p-3" fxLayout="column" fxLayoutAlign="space-around center">
+          <div>Total Parked Vehicle</div>
+          <div>{{totalParkedVehicles}}</div>
+        </div>
+      </mat-card>
+    </div>
+
+    <div *ngIf="typesOfVehicleParked.length > 0" class="mt-3" fxLayout="column" fxLayoutAlign="start start" >
+      <div class="fs-6 p-1 fw-semibold">Cards representing a list of parked vehicles types</div>
+      <div fxLayout="row wrap">
+        <ng-container *ngFor="let type of typesOfVehicleParked">
+          <mat-card class="me-3">
+            <div class="p-3" fxLayout="column" fxLayoutAlign="space-around center">
+              <div>{{type.VehicleType}}</div>
+              <div>{{type.Count}}</div>
+            </div>
+          </mat-card>
+        </ng-container>
+      </div>
+      
+    </div>
+
+    <div *ngIf="typesOfVehicleParked.length > 0" class="mt-3" fxLayout="column" fxLayoutAlign="start start" >
+      <div class="fs-6 p-1 fw-semibold">Pie chart representing summary of vehicles</div>
+      <div *ngIf="parkedVehicleChart">
+        <apx-chart
+          [series]="parkedVehicleChart.series"
+          [chart]="parkedVehicleChart.chart"
+          [colors]="parkedVehicleChart.colors"
+          [labels]="parkedVehicleChart.labels"
+          [legend]="parkedVehicleChart.legend"
+          [dataLabels]="parkedVehicleChart.dataLabels"
+          [plotOptions]="parkedVehicleChart.plotOptions"
+          [grid]="parkedVehicleChart.grid"
+      ></apx-chart>
+      </div>
+    </div>
 </div>
